--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <span class="badge">Project Manager & Analyst</span>
+            <span class="badge">Project Manager Senior & Analyst</span>
             <h1>Crafting Digital Solutions with <span class="text-gradient">Logic & Precision</span></h1>
             <p>Spesialis dalam menjembatani visi bisnis klien menjadi sistem teknis yang handal. Berpengalaman mengelola tim developer dengan workflow yang efisien.</p>
             <div class="hero-btns">
